Further document Source Entries to Destinations in WordPress

--- a/HISTORY.org
+++ b/HISTORY.org
@@ -88,6 +88,7 @@
   - Loads categories, tags, and pages without failing on error
   - Adds tag checkout to org2blog-def-checkout-statement
   - Documents WordPress version
+  - Further document Source Entries to Destinations in WordPress
 
 * v1.0
 ** v1.0.00
